--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -7,7 +7,7 @@
   },
   "main": "server.ts",
   "scripts": {
-    "start": "node ./www/server.js",
+    "start": "node server.js",
     "tsc": "npx tsc",
     "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
     "prod": "npx tsc && node ./www/server.js",
@@ -30,10 +30,11 @@
     "email-validator": "^2.0.4",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.1",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.5.0",
-    "sequelize-typescript": "^0.6.9"
+    "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.26",
@@ -49,7 +50,7 @@
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^6.1.4",
-    "ts-node-dev": "^1.0.0-pre.32",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.2.3"
   }
 }
