--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -40,6 +40,7 @@
     "@types/bluebird": "^3.5.26",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.16.1",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^11.11.6",
     "@types/sequelize": "^4.27.44",
     "@types/validator": "^10.9.0",
@@ -50,6 +51,7 @@
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^6.1.4",
+    "morgan": "^1.10.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.2.3"
   }
