--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2.1
 orbs:
   # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
-  node: circleci/node@5.0.2
+  node: circleci/node@5.0.3
   eb: circleci/aws-elastic-beanstalk@2.0.1
-  aws-cli: circleci/aws-cli@3.1.1
+  aws-cli: circleci/aws-cli@3.1.3
   # different jobs are calles later in the workflows sections
 jobs:
   build:
@@ -24,37 +24,43 @@ jobs:
             echo "NPM --version" 
             echo $(npm --version)
             npm run frontend:install
-      # TODO: Install dependencies in the the backend API          
-      - run:
-          name: Install API Dependencies
-          command: |
-           echo "TODO: Install dependencies in the the backend API  "
+      # # TODO: Install dependencies in the the backend API          
+      # - run:
+      #     name: Install API Dependencies
+      #     command: |
+      #      echo "TODO: Install dependencies in the the backend API  "
       # TODO: Lint the frontend
       - run:
           name: Front-End Lint
           command: |
-            echo "TODO: Lint the frontend"
+            echo "Lint the frontend"
+            npm run frontend:lint
+      - run:
+          name: Test Front-End
+          command: /
+            echo "testing front-end app"
+            npm run frontend:test
       # TODO: Build the frontend app
       - run:
           name: Front-End Build
           command: |
             echo "TODO: Build the frontend app"
-      # TODO: Build the backend API      
-      - run:
-          name: API Build
-          command: |
-            echo "TODO: Build the backend API"
+      # # TODO: Build the backend API      
+      # - run:
+      #     name: API Build
+      #     command: |
+      #       echo "TODO: Build the backend API"
   # deploy step will run only after manual approval
   deploy:
     docker:
       - image: "cimg/base:stable"
       # more setup needed for aws, node, elastic beanstalk
     steps:
-      - node/install:
-          node-version: '14.15' 
-      - eb/setup
-      - aws-cli/setup
-      - checkout
+      # - node/install:
+      #     node-version: '14.15' 
+      # - eb/setup
+      # - aws-cli/setup
+      # - checkout
       - run:
           name: Deploy App
           # TODO: Install, build, deploy in both apps
