--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs:
   # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@5.0.3
+  browser-tools: circleci/browser-tools@1.4.0
   eb: circleci/aws-elastic-beanstalk@2.0.1
   aws-cli: circleci/aws-cli@3.1.3
   # different jobs are calles later in the workflows sections
@@ -14,6 +15,8 @@ jobs:
       # install node and checkout code
       - node/install:
           node-version: '14.15'         
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
       - checkout
       # Use root level package.json to install dependencies in the frontend app
       - run:
