--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,17 +63,24 @@ jobs:
       - image: "cimg/base:stable"
       #TODO more setup needed for aws, node, elastic beanstalk
     steps:
-      # - node/install:
-      #     node-version: '14.15' 
-      # - eb/setup
-      # - aws-cli/setup
-      # - checkout
+      - node/install:
+          node-version: '14.15' 
+      - eb/setup
+      - aws-cli/setup
+      - checkout
       - run:
           name: Deploy App
           # TODO: Install, build, deploy in both apps
           command: |
             echo "# TODO: Install, build, deploy in both apps"
-            
+      - run:
+          name: build front-end
+          command: |
+            npm run frontend:build
+      - run:
+          name: deploy front-end
+          command: |
+            npm run frontend:deploy
 workflows:
   udagram:
     jobs:
