--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,11 @@ jobs:
             echo "NPM --version" 
             echo $(npm --version)
             npm run frontend:install
-      # # TODO: Install dependencies in the the backend API          
-      # - run:
-      #     name: Install API Dependencies
-      #     command: |
-      #      echo "TODO: Install dependencies in the the backend API  "
+      - run:
+          name: Install API Dependencies
+          command: |
+            echo " Install dependencies in the the backend API  "
+            npm run api:install
       - run:
           name: Front-End Lint
           command: |
@@ -52,16 +52,15 @@ jobs:
           command: |
             echo "Build the frontend app"
             npm run frontend:build
-      # # TODO: Build the backend API      
-      # - run:
-      #     name: API Build
-      #     command: |
-      #       echo "TODO: Build the backend API"
+      - run:
+          name: API Build
+          command: |
+            echo "Build the backend API"
+            npm run api:build
   # deploy step will run only after manual approval
   deploy:
     docker:
       - image: "cimg/base:stable"
-      #TODO more setup needed for aws, node, elastic beanstalk
     steps:
       - node/install:
           node-version: '14.15' 
@@ -69,14 +68,13 @@ jobs:
       - aws-cli/setup
       - checkout
       - run:
-          name: Deploy App
-          # TODO: Install, build, deploy in both apps
-          command: |
-            echo "# TODO: Install, build, deploy in both apps"
-      - run:
           name: deploy front-end
           command: |
             npm run frontend:deploy
+      - run:
+          name: deploy api
+          command: |
+            npm run api:deploy
 workflows:
   udagram:
     jobs:
