--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -33,8 +33,8 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.5.0",
-    "sequelize-typescript": "^2.1.3"
+    "sequelize": "^6.25.3",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.26",
@@ -43,6 +43,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^11.11.6",
     "@types/sequelize": "^4.27.44",
+    "@types/validator": "^13.7.8",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "chai": "^4.2.0",
